# leicester-engine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
AssetProcessor/: CMakeLists.txt  main.cpp
Engine/: CMakeLists.txt  LeicesterEngine.h
Engine/Assets/: colourtriangle.frag  colourtriangle.vert  meshtriangle.vert  meshtriangle.vert.spv  triangle.frag  triangle.vert
Engine/Assets/Colliders/: Collider.frag  Collider.vert
Engine/Assets/Deferred-Pipeline/: combination.frag  combination.vert
Engine/Assets/Materials/Deferred-Pipeline/: combination.frag  combination.vert
Engine/Collision/: AABBCollider.h  CMakeLists.txt  Collider.h  CollisionEngine.h  GJKCollisionEngine.h  MeshCollider.h  SphereCollider.h
Engine/Collision/Source/: AABBCollider.cpp  Collider.cpp  CollisionEngine.cpp  GJKCollisionEngine.cpp  MeshCollider.cpp  SphereCollider.cpp
Engine/Engine/: BoundingBox.h  CMakeLists.txt  LObject.h  Octree.h
Engine/Engine/Source/: BoundingBox.cpp  Octree.cpp
Engine/Material/: CMakeLists.txt  Material.h
Engine/Material/Source/: Material.cpp
Engine/Mesh/: CMakeLists.txt  Mesh.h  StaticMesh.h  Vertex.h
Engine/Mesh/Source/: Mesh.cpp  StaticMesh.cpp  Vertex.cpp
Engine/Platform/: CMakeLists.txt
Engine/Platform/Posix/: CMakeLists.txt  FileUtils.cpp
Engine/Rendering/: CMakeLists.txt  Renderer.h
Engine/Rendering/GPUStructures/: CMakeLists.txt  Camera.h  GpuCameraStruct.h  GpuStructs.h
Engine/Rendering/GPUStructures/Source/: Camera.cpp  GpuCameraStruct.cpp  GpuStructs.cpp
Engine/Rendering/Source/: Renderer.cpp
Engine/Rendering/Vulkan/: AllocatedBuffer.h  AllocationStructures.h  CMakeLists.txt  DeletionQueue.h  FrameData.h  FrameStructures.h  MeshPushConstants.h  PipelineBuilder.h  VMaterial.h  VTexture.h  VTextureUtil.h  VertexDescription.h  VkShortcuts.h  VulkanRenderer.h
Engine/Rendering/Vulkan/Source/: DeletionQueue.cpp  FrameData.cpp  FrameStructures.cpp  PipelineBuilder.cpp  VMaterial.cpp  VTexture.cpp  VTextureUtil.cpp  VertexDescription.cpp  VkShortcuts.cpp  VulkanRenderer.cpp
Engine/Scene/: CMakeLists.txt  Scene.h
Engine/Scene/Actor/: Actor.h  CMakeLists.txt
Engine/Scene/Actor/Source/: Actor.cpp
Engine/Scene/Source/: Scene.cpp
Engine/Source/: LeicesterEngine.cpp
Engine/Texture/: CMakeLists.txt  Texture.h
Engine/Texture/Source/: Texture.cpp
Engine/Utils/: CMakeLists.txt  EngineSettings.h  FileUtils.h  IdTrackedResource.h  Logger.h
Engine/Utils/Source/: FileUtils.cpp  Logger.cpp
File Standards/: LMesh.md  LTex.md  Model.md  Model.txt
TestProject/: CMakeLists.txt  ControlledActor.cpp  (+4 more)
(+19 files in other folders)
